# mlReview

./: .gitignore
backend/: CMakeLists.txt
backend/cmake/: FindDataLinkClient.cmake  FindOpenLdap.cmake
backend/include/drp/database/aqms/: arrival.hpp  assocaro.hpp  credit.hpp  event.hpp  origin.hpp
backend/include/drp/database/connection/: mongodb.hpp  postgresql.hpp
backend/include/drp/database/machineLearning/: arrival.hpp  event.hpp  origin.hpp
backend/include/drp/messages/: error.hpp  message.hpp
backend/include/drp/service/: exceptions.hpp  handler.hpp  resource.hpp
backend/include/drp/service/catalog/: arrival.hpp  event.hpp  magnitude.hpp  origin.hpp  resource.hpp  response.hpp
backend/include/drp/service/stations/: resource.hpp  response.hpp  station.hpp
backend/include/drp/service/waveforms/: resource.hpp  response.hpp
backend/include/drp/waveServer/: client.hpp  dataLink.hpp  fdsn.hpp  multiClient.hpp  request.hpp  segment.hpp  waveform.hpp
backend/include/drp/webServer/: listener.hpp
backend/include/mlReview/database/aqms/: arrival.hpp  assocaro.hpp  credit.hpp  event.hpp  origin.hpp
backend/include/mlReview/database/connection/: mongodb.hpp  postgresql.hpp
backend/include/mlReview/database/machineLearning/: arrival.hpp  event.hpp  origin.hpp
backend/include/mlReview/messages/: error.hpp  message.hpp
backend/include/mlReview/service/: exceptions.hpp  handler.hpp  resource.hpp
backend/include/mlReview/service/actions/: acceptEventToAWS.hpp  deleteEventFromAWS.hpp
backend/include/mlReview/service/catalog/: arrival.hpp  event.hpp  magnitude.hpp  origin.hpp  resource.hpp  response.hpp
backend/include/mlReview/service/stations/: resource.hpp  response.hpp  station.hpp
backend/include/mlReview/service/waveforms/: resource.hpp  response.hpp
backend/include/mlReview/waveServer/: client.hpp  dataLink.hpp  fdsn.hpp  multiClient.hpp  request.hpp  segment.hpp  waveform.hpp
backend/include/mlReview/webServer/: listener.hpp
backend/src/: main.cpp
backend/src/database/aqms/: arrival.cpp  assocaro.cpp  credit.cpp  event.cpp  origin.cpp
backend/src/database/connection/: mongodb.cpp  postgresql.cpp
backend/src/database/machineLearning/: arrival.cpp  event.cpp  origin.cpp
backend/src/messages/: error.cpp  message.cpp
backend/src/private/: aqmsDatabaseUtilities.hpp  isEmpty.hpp  lonTo180.hpp  regions.hpp
backend/src/service/: handler.cpp  resource.cpp
backend/src/service/actions/: acceptEventToAWS.cpp  curl.hpp  deleteEventFromAWS.cpp  mongoUtilities.hpp
backend/src/service/catalog/: arrival.cpp  event.cpp  origin.cpp  resource.cpp  response.cpp
backend/src/service/stations/: resource.cpp  response.cpp  station.cpp
backend/src/service/waveforms/: resource.cpp  response.cpp
backend/src/waveServer/: client.cpp  curl.hpp  dataLink.cpp  fdsn.cpp  multiClient.cpp  request.cpp  segment.cpp  unpackMiniSEED3.hpp  waveform.cpp
backend/src/webServer/: authorized.hpp  listener.cpp  responses.hpp  server.hpp
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  LocationReview.tsx  MainContainer.tsx  ReviewPage.tsx  Summary.tsx  WaveformChart.tsx
frontend/src/utilities/: eventActions.ts  eventTypes.ts  fetchEvents.ts  fetchWaveformData.ts  loginToAPI.ts  regions.ts  strftimeUTC.ts  userCredentials.ts  waveformTypes.ts
